# simd-learning

./: Cargo.toml  LICENSE  readme.md
.cargo/: config.toml
benches/: index_of.rs  left_pad.rs  lowercase.rs  right_pad.rs
src/: lib.rs  limit.rs  offset.rs
src/buffer/: buffer_pool.rs  mod.rs
src/parts/: header.rs
src/utils/: alloc.rs  ascii.rs  mod.rs  simd.rs
src/utils/avx/: mod.rs  search.rs
src/utils/simd/: aligned.rs  iter.rs  search.rs
