[package]
name = "simd-http"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "example"
path = "bin/example.rs"

[dependencies]
monoio = { version = "0.2.3", default-features = false, features = ["iouring"] }
thiserror = "1.0.63"

[dev-dependencies]
memchr = "2.6.4"

[profile.dev]
#opt-level = 2
debug-assertions = false
overflow-checks = false
strip = false
debug = "full"

[profile.release]
opt-level = 3